--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "env": "^0.0.2",
     "firebase": "^12.6.0",
     "numeral": "^2.0.6",
     "react": "^19.2.0",
